--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "inquirer": "^7.3.3",
     "shelljs": "^0.8.4"
+  },
+  "devDependencies": {
+    "contentful-cli": "^1.5.14"
   }
 }
