Script to setup admin panel

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "This repo contains the main direct-democracy module.",
   "main": "index.js",
+  "bin": {
+    "admin-setup": "./scripts/admin-setup.js"
+  },
   "repository": "https://github.com/grundeinkommensbuero/direct-democracy-entry.git",
   "author": "Valioesi <Vali_Schagerl@web.de>",
   "license": "MIT",
